# bombjack

./: .gitignore  CMakeLists.txt  README.md  build.sh
.claude/: settings.json
assets/: sprites.json
src/: animsprite.h  background.cpp  background.h  banner_png.h  bird_png.h  bombs_png.h  bonus_png.h  bonuse_png.h  bonuss_png.h  bonustaken_png.h  coins_png.h  color.h  constants.h  draw.cpp  draw.h  enemy.cpp  enemy.h  explosion_png.h  game.cpp  game.h  initenemy_png.h  jack_png.h  levels_data.h  live_png.h  main.cpp  mummy_png.h  pickcoin_png.h  powerball_png.h  renderer.cpp  renderer.h  screens_png.h  sprite_atlas.h  sprites.cpp  sprites.h  sprites_full_png.h  sprites_pack.h  start_png.h  types.h
